deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: my-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-deployment 
  template:
    metadata:
      labels:
        app: my-deployment
    spec:
      containers:
        - name: my-app-container
          image: akashmore947/my-app-image:replacewithlatesttag
          ports:
            - containerPort: 8000
            
---
# Service YAML
apiVersion: v1 
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: my-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
