service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-deployment
spec:
  selector:
    app: my-deployment 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
